# Appt-OCR

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
appt_ocr/: __init__.py  cli.py  coordinates.py  image.py  inpainting.py  merging.py  ocr.py  pdf.py  processing.py
docs/: API.md  DEVELOPMENT.md  FAQ.md  SUPPORT.md
tests/: __init__.py  conftest.py  test_cli.py  test_coordinates.py  test_image.py  test_inpainting.py  test_merging.py  test_ocr.py  test_pdf.py  test_processing.py
